# eye-relax

./: LICENSE  README.md  eslint.config.js  package-lock.json  package.json
.claude/rules/: architecture.md  plan.md  requirements.md  rules.md
.github/workflows/: ci.yml  release.yml
docs/: linux-distribution-plan.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: activity.rs  commands.rs  config.rs  events.rs  lib.rs  main.rs  notifications.rs  overlay.rs  power.rs  prompt.rs  scheduler.rs  screen_lock.rs  stats.rs  storage.rs  tray.rs  updates.rs  x11_grab.rs
src-tauri/src/platform/: mod.rs  wayland.rs  x11.rs
src/components/: OverlayWindow.tsx  PromptWindow.tsx  SettingsPanel.tsx  StatsDashboard.tsx
src/components/settings/: SettingsLayout.tsx  Sidebar.tsx  UpdateBanner.tsx  controls.tsx
src/components/settings/pages/: AboutPage.tsx  AppearancePage.tsx  GeneralPage.tsx  SoundPage.tsx  StatsPage.tsx  TimersPage.tsx
src/hooks/: useAppVersion.ts  useTauriEvents.ts
src/lib/: ipc.ts
src/stores/: useConfigStore.ts  useSchedulerStore.ts  useUpdateStore.ts
